k8s/prod/hass/namespace.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: hass
  labels:
    name: hass
