k8s/prod/hass/hass.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: hass
    app.kubernetes.io/name: home-assistant
    #pool: http # to enable bgp if needed
  name: hass-home-assistant
  namespace: hass
spec:
  ports:
  - name: http
    port: 8123
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/instance: hass
    app.kubernetes.io/name: home-assistant
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    configmap.reloader.stakater.com/reload: hass
  labels:
    app.kubernetes.io/instance: hass
    app.kubernetes.io/name: home-assistant
  name: hass-home-assistant
  namespace: hass
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: hass
      app.kubernetes.io/name: home-assistant
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: hass
        app.kubernetes.io/name: home-assistant
    spec:
      automountServiceAccountToken: true
      containers:
      - env:
        - name: TZ
          value: UTC
        image: ghcr.io/home-assistant/home-assistant:2026.9.4
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 0
          periodSeconds: 10
          tcpSocket:
            port: 8123
          timeoutSeconds: 1
        name: hass-home-assistant
        ports:
        - containerPort: 8123
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 0
          periodSeconds: 10
          tcpSocket:
            port: 8123
          timeoutSeconds: 1
        resources:
          requests:
            cpu: 63m
            memory: 717M
        securityContext:
          capabilities:
            add:
            - NET_ADMIN
            - NET_RAW
            - SYS_ADMIN
          privileged: true
        startupProbe:
          failureThreshold: 30
          initialDelaySeconds: 0
          periodSeconds: 5
          tcpSocket:
            port: 8123
          timeoutSeconds: 1
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /configmap
          name: configmap
      dnsPolicy: ClusterFirstWithHostNet
      enableServiceLinks: true
      hostNetwork: true
      serviceAccountName: default
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: hass-data
      - configMap:
          name: hass
        name: configmap
