k8s/prod/hass/tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hass
  namespace: hass
  annotations:
    tailscale.com/funnel: "true"
spec:
  defaultBackend:
    service:
      name: hass-home-assistant
      port:
        number: 8123
  ingressClassName: tailscale
  tls:
  - hosts:
    - hass
