k8s/prod/hass/traefik.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hass-server-redirect
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`hass.marcyoung.us`)
      priority: 10
      middlewares:
        - name: httpredirectscheme
          namespace: traefik
      services:
        - name: hass-home-assistant
          port: 8123
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hass
  namespace: hass
  annotations:
    kubernetes.io/ingress.class: traefik
    certmanager.k8s.io/cluster-issuer: letsencrypt-hass-prod
    certmanager.k8s.io/acme-challenge-type: dns01
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`hass.marcyoung.us`)
      services:
        - name: hass-home-assistant
          port: 8123
  tls:
    secretName: hass-cert
